<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/unmedit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/unm"
        android:layout_alignBottom="@+id/unm"
        android:layout_marginLeft="48dp"
        android:layout_marginStart="48dp"
        android:layout_toRightOf="@+id/unm"
        android:layout_toEndOf="@+id/unm"
        android:ems="10"
        android:hint="@string/nameLogin"
        android:text="" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/unm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="85dp"
        android:text="@string/usernameLabel" />

    <TextView
        android:id="@+id/pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/unm"
        android:layout_alignStart="@+id/unm"
        android:layout_below="@+id/unmedit"
        android:layout_marginTop="41dp"
        android:text="@string/passwordLabel" />

    <EditText
        android:id="@+id/pwdedit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/pwd"
        android:layout_alignBottom="@+id/pwd"
        android:layout_alignLeft="@+id/unmedit"
        android:layout_alignStart="@+id/unmedit" 
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/pwdLogin" 
        android:text=""/>

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/loginButton" />

    <Button
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/login"
        android:layout_alignLeft="@+id/login"
        android:layout_below="@+id/login"
        android:layout_marginTop="41dp"
        android:text="@string/signupButton" />

</RelativeLayout>
